<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="10dp" >

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/payment_details"
            android:ems="10"
            android:textSize="25dp"
            android:padding="30dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:id="@+id/editText"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

        <EditText
                android:id="@+id/text_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_card_number"
                android:inputType="numberDecimal"
                android:maxLength="16"
                android:padding="10dp"/>
        <EditText
                android:id="@+id/text_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_card_name"
                android:inputType="textPersonName"
                android:padding="10dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <EditText
                    android:id="@+id/text_cvc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_card_code"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="10dp" android:layout_weight="1"/>
            <EditText
                    android:id="@+id/text_expiry"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_card_expiry"
                    android:maxLength="5"
                    android:inputType="date"
                    android:padding="10dp" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/cancel"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_cancel"/>
            <Button
                    android:text="@string/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_submit"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>