<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="10dp">

    <ProgressBar
            android:id="@+id/progress_bar_auth"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <LinearLayout
            android:id="@+id/credential_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

        <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="128"
                android:padding="10dp"/>

        <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:maxLength="32"
                android:inputType="textPassword"
                android:padding="10dp"/>

        <Button
                android:id="@+id/button_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/blue"
                android:textColor="@color/white"
                android:text="@string/register"/>

        <Button
                android:id="@+id/button_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@null"
                android:text="@string/action_login"
                android:textColor="@color/blue"
                android:textAllCaps="false"
                android:textSize="15dp"/>

    </LinearLayout>

</LinearLayout>